chart/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"  # 指定后端协议为 gRPC
  name: sla2-grpc
  namespace: default
spec:
  ingressClassName: public
  rules:
  - host: sla2-grpc.leeszi.cn
    http:
      paths:
      - backend:
          service:
            name: sla2-grpc  # 服务名称
            port:
              number: 9001    # gRPC 服务端口
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sla2-grpc.leeszi.cn
    secretName: sla2-grpc-leeszi-tls  # TLS 证书的 Secret 名称
